feat: add card for learn page

--- a/src/page.njk
+++ b/src/page.njk
@@ -24,7 +24,7 @@ permalink: "/{{ '/' if pageItem.slug === 'home' else pageItem.slug  }}/"
 			<a href="/views/" class="blue card">
 				<h2>Read current views in inclusive data science</h2>
 			</a>
-			<a href="/tools/" class="green card" hidden>
+			<a href="/learn/" class="green card">
 				<h2>Find inclusive data tools</h2>
 			</a>
 			<a href="/inclusion-challenges/" class="yellow card">
