feat(context): this is fixed

--- a/src/_includes/components/contact-info.njk
+++ b/src/_includes/components/contact-info.njk
@@ -11,7 +11,7 @@
 	<h2>Contact Us</h2>
 	<div>
 		<address>
-			<a href="mailto:wecount@inclusivedesign.ca">wecount@inclusivedesign.ca</a><br>
+			<a href="mailto:wecount@inclusivedesign.ca">wecount@inclusiv&shy;edesign.ca</a><br>
 			IDRC<br>
 			205 Richmond Street West<br>
 			Toronto, ON M5V 1V3
