--- a/src/scss/components/_components.scss
+++ b/src/scss/components/_components.scss
@@ -3,6 +3,7 @@
 @import "brand";
 @import "cards";
 @import "filter";
+@import "initiatives";
 @import "news-and-views";
 @import "pagination";
 @import "post-article";
