--- a/src/_includes/components/workshop.njk
+++ b/src/_includes/components/workshop.njk
@@ -1,8 +1,10 @@
 <article class="workshop">
-	<h2>{{ workshop.title }}</h2>
+	<h2>{{ workshop.title | safe }}</h2>
 	{% if workshop.imageUrl %}
-	<img src="{{ workshop.imageUrl | safe }}" alt="{{ workshop.altTag }}">
+	<a href="/initiative/{{ workshop.id }}">
+		<img class="workshop-image" src="{{ workshop.imageUrl | safe }}" alt="{{ workshop.imageAlt }}">
+	</a>
 	{% endif %}
 
-	<div class="description">{{ workshop.shortDescription }}</div>
+	<div class="description">{{ workshop.shortDescription | safe }}</div>
 </article>
