fix: corrected colors of yellow and green cards

--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -17,19 +17,17 @@
 
 	.blue {
 		background-image: url("../images/distribution--blue.svg");
-		background-position-x: rem(-80);
-		background-size: 120% 162%;
+		background-position: 95% 100%;
 	}
 
 	.green {
 		background-image: url("../images/distribution--green.svg");
-		background-position: rem(-100) rem(10);
-		background-size: 100% 100%;
+		background-position: 85% 80%;
 	}
 
 	.yellow {
 		background-image: url("../images/distribution--yellow.svg");
-		background-size: 200% 101%;
+		background-position: 85% 80%;
 	}
 
 	a {
