feat: add service worker

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -5,7 +5,9 @@
 <html lang="en-ca">
 	<head>
 		{% include 'globals/matomo-analytics.njk' %}
+		{% include 'globals/service-worker.njk' %}
 		{% include 'globals/meta.njk' %}
+		<link rel="manifest" href="/manifest.json">
 		<link rel="stylesheet" href="/scss/main.css"/>
 		<script src="/js/main.js" defer></script>
 		<link rel="preload" href="/lib/infusion/dist/infusion-uio.min.js" as="script">
