--- a/src/_includes/globals/meta.njk
+++ b/src/_includes/globals/meta.njk
@@ -14,4 +14,4 @@
 <meta property="og:title" content="{{ pageTitle }} | {{ site.title }}">
 <meta property="og:url" content="{{ env.baseUrl if env.baseUrl }}{{ page.url }}">
 <link rel="icon" type="image/png" href="/images/favicon.png">
-<link rel="apple-touch-icon" href="/images/icon.png" sizes="512x512">
+<link rel="apple-touch-icon" href="/images/logo-512.png" sizes="512x512">
