--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -5,6 +5,7 @@
 <html lang="en-ca">
 	<head>
 		{% include 'globals/matomo-analytics.njk' %}
+		{% include 'globals/service-worker.njk' %}
 		{% include 'globals/meta.njk' %}
 		<link rel="stylesheet" href="/scss/main.css"/>
 		<script src="/js/main.js" defer></script>
