feat: add responsive utilities

--- a/src/scss/abstracts/_functions.scss
+++ b/src/scss/abstracts/_functions.scss
@@ -11,3 +11,7 @@
 
 	@return $pixels / $context * 1rem;
 }
+
+@function breakpoint-value($name, $breakpoints: $breakpoints) {
+	@return map-get($breakpoints, $name);
+}
