--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -52,3 +52,14 @@ $UIOThemes:
 	"gd" #888 #222,
 	"gw" #6c6c6c #fff,
 	"bbr" #000 #b96;
+
+// Responsive Breakpoints, shamelessy cribbed from Bootstrap.
+// @see https://github.com/twbs/bootstrap/blob/master/scss/mixins/_breakpoints.scss
+
+$breakpoints: (
+	xs: 280,       // Galaxy Fold portrait size
+	sm: 640,       // UIO breakpoint
+	md: 768,       // Ipad Portrait size
+	lg: 1024,      // Ipad Landscape size
+	xl: 1366       // Ipad Pro Landscape size
+);
