--- a/src/scss/components/_aside.scss
+++ b/src/scss/components/_aside.scss
@@ -3,7 +3,7 @@ aside {
 	justify-self: end;
 }
 
-@media screen and (min-width: rem(1024)) {
+@include breakpoint-up(lg) {
 	#defaultContainer aside {
 		display: inherit;
 		padding-top: rem(58);
