--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -148,7 +148,7 @@ article {
 	width: rem(1);
 }
 
-@media screen and (min-width: rem(1024)) {
+@include breakpoint-up(lg) {
 	body {
 		background-position: center;
 	}
@@ -241,7 +241,7 @@ article {
 
 // This media query breakpoint comes the landscape mode of the iPad Pro.
 // From here the larger size of the iframe will be implemented for aligned left or aligned right embedded media.
-@media screen and (min-width: rem(1366)) {
+@include breakpoint-up(xl) {
 	main article {
 		.alignleft,
 		.alignright {
