--- a/src/workshop-comments.njk
+++ b/src/workshop-comments.njk
@@ -18,7 +18,7 @@ permalink: "initiatives/{{ workshopItem.id }}/"
 
 		<div class="description">{{ workshopItem.fullDescription | safe }}</div>
 
-		<form id="comment-form" class="input-comment">
+		<form id="comment-form">
 			<h3>Comments</h3>
 			<div class="form-control">
 				<span>*</span><p class="asterisk-def"> Indicates required field</p>
