feat(footerlink): aligned the gmail link in one line

--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -68,6 +68,7 @@ footer {
 			a {
 				color: $white;
 				font-weight: $font-weight-normal;
+				white-space: nowrap;
 
 				svg {
 					padding: rem(32) rem(16) rem(16) 0;
