feat: add responsive utilities (resolves #118) (#377)

--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -39,7 +39,7 @@
 	}
 }
 
-@media screen and (min-width: rem(1024)) {
+@include breakpoint-up(lg) {
 	.homepage-cards {
 		background-color: $white;
 		grid-gap: rem(38);
