fix: change initatives page permalink back to previous url

--- a/src/initiatives.njk
+++ b/src/initiatives.njk
@@ -1,6 +1,6 @@
 ---
 title: Initiatives
-permalink: /initiatives/{% if pagination.pageNumber > 0 %}page/{{ pagination.pageNumber + 1 }}/{% endif %}
+permalink: /initiatives/
 pagination:
   data: collections.workshops
   size: 10
