--- a/src/workshop-comments.njk
+++ b/src/workshop-comments.njk
@@ -37,8 +37,12 @@ permalink: "initiatives/{{ workshopItem.id }}/"
 			</div>
 		</form>
 
-		<div class="submitted-comment-message" aria-live="assertive">
+		<div class="submitted-comment-message post-success-message" aria-live="assertive">
 			<span>Thank you for submitting your comment. It will be posted on the page once it is approved</span>
+		</div>
+
+		<div class="submitted-comment-message post-failure-message" aria-live="assertive">
+			<span>There was an error submitting your comment. Please try again</span>
 		</div>
 
 		<div class="comments">
