--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -15,6 +15,7 @@ $max-width-margins: rem(1600);
 // Primary
 $white: #fff;
 $red: #ff3636;
+$red-light: #ffaca7;
 $blue-dark: #6895c6;
 $blue: #84bcde;
 $blue-light: #acdde9;
