feat: blur images with missing or unhelpful alt tags

--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -113,6 +113,13 @@ article {
 		audio {
 			max-width: 100%;
 		}
+
+		// Blur imags which are missing alt tags altogether
+		// or whose alt tags begin with "This image has an empty alt attribute"
+		img:not([alt]),
+		img[alt^="This image has an empty alt attribute"] {
+			filter: blur(10px);
+		}
 	}
 
 	video {
