--- a/src/_includes/globals/meta.njk
+++ b/src/_includes/globals/meta.njk
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>{{ pageTitle }} | {{ site.title }}</title>
+<title>{{ pageTitle | htmlSymbolFilter }} | {{ site.title }}</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <meta name="mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-title" content="{{ site.title }}">
