--- a/src/workshop-comments.njk
+++ b/src/workshop-comments.njk
@@ -26,12 +26,12 @@ permalink: "initiatives/{{ workshopItem.id }}/"
 
 			<div class="form-field">
 				<span>*</span><label for="name"><h4>Name</h4></label><span class="required">Required</span>
-				<input id="name" type="text" name="name" :value="nameTerm" placeholder="" aria-label="Enter your name">
+				<input id="name" type="text" name="name" placeholder="" aria-label="Enter your name">
 			</div>
 
 			<div class="form-field">
 				<span>*</span><label for="comment"><h4>Post a comment or question</h4></label><span class="required">Required</span>
-				<textarea id="comment" type="text" name="comment" :value="commentTerm" placeholder="" aria-label="Enter your comment"></textarea>
+				<textarea id="comment" type="text" name="comment" placeholder="" aria-label="Enter your comment"></textarea>
 				<input type="hidden" name="workshopId" id="workshopId" value="{{ workshopItem.id }}">
 				<button id="post-comment" type="submit">Post a comment</button>
 			</div>
