--- a/src/workshop-comments.njk
+++ b/src/workshop-comments.njk
@@ -37,11 +37,11 @@ permalink: "initiatives/{{ workshopItem.id }}/"
 			</div>
 		</form>
 
-		<div class="save-response post-success-message" aria-live="assertive">
+		<div class="save-response post-success-message" role="status">
 			<span>Thank you for submitting your comment. It will be posted on the page once it is approved</span>
 		</div>
 
-		<div class="save-response post-failure-message" aria-live="assertive">
+		<div class="save-response post-failure-message" role="alert">
 			<span>There was an error submitting your comment. Please try again</span>
 		</div>
 
