fix: remove required selector

--- a/src/scss/components/_initiatives.scss
+++ b/src/scss/components/_initiatives.scss
@@ -76,7 +76,8 @@
 	.form-field {
 		margin-bottom: rem(40);
 
-		.required {
+		.required-name,
+		.required-comment {
 			display: none;
 
 			&:invalid {
