--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -1,6 +1,6 @@
 // Mixins.
 
-// Maintain aspect ration of a container
+// Maintain aspect ratio of a container
 @mixin aspect-ratio($width, $height) {
 	position: relative;
 
@@ -25,7 +25,7 @@
 	}
 }
 
-// Maintain aspect ration of a container
+// Maintain aspect ratio of a container
 @mixin tags() {
 	display: flex;
 	flex-wrap: wrap;
@@ -172,6 +172,11 @@
 				box-shadow: rem(-10) rem(10) rem(10) currentColor;
 			}
 		}
+	}
+
+	// Workshop Page
+	.submitted-comment {
+		opacity: 0.7;
 	}
 
 	// Focus/hover styles for SVGs on the footer
