feat: create the workshop comments page (resolves #350) (#378)

--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -1,6 +1,6 @@
 // Mixins.
 
-// Maintain aspect ration of a container
+// Maintain aspect ratio of a container
 @mixin aspect-ratio($width, $height) {
 	position: relative;
 
@@ -25,7 +25,7 @@
 	}
 }
 
-// Maintain aspect ration of a container
+// Maintain aspect ratio of a container
 @mixin tags() {
 	display: flex;
 	flex-wrap: wrap;
@@ -174,6 +174,11 @@
 		}
 	}
 
+	// Workshop Page
+	.submitted-comment {
+		opacity: 0.7;
+	}
+
 	// Focus/hover styles for SVGs on the footer
 	footer .footer-content {
 		// Logos on the footer
@@ -229,6 +234,8 @@
 	.search-container input,
 	button:not(.filter-expand-button):focus,
 	button:not(.filter-expand-button):hover,
+	#comment-form button,
+	#comment-form button::before,
 	li .pagination-link,
 	li .pagination-link::before,
 	.wp-block-file__button:focus,
