--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -14,6 +14,8 @@ $max-width-margins: rem(1600);
 
 // Primary
 $white: #fff;
+$red: #ff3636;
+$red-light: #ffaca7;
 $blue-dark: #6895c6;
 $blue: #84bcde;
 $blue-light: #acdde9;
