feat: add home page tile for the badges page

--- a/src/page.njk
+++ b/src/page.njk
@@ -30,6 +30,9 @@ permalink: "/{{ '/' if pageItem.slug === 'home' else pageItem.slug  }}/"
 			<a href="/inclusion-challenges/" class="yellow card">
 				<h2>Participate in our inclusion challenge workshops</h2>
 			</a>
+			<a href="/badges/" class="purple card">
+				<h2>Earn WeCount Badges</h2>
+			</a>
 		</div>
 </div>
 
