--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -6,9 +6,10 @@
 
 	.card {
 		background-color: $white;
+		background-position: 50% 80%;
 		background-repeat: no-repeat;
 		box-shadow: 0 rem(4) rem(4) rgba(0, 0, 0, 0.25);
-		height: rem(192);
+		height: rem(256);
 
 		&:hover,
 		&:focus {
@@ -24,30 +25,25 @@
 	}
 
 	.blue {
-		background-image: url("../images/distribution--blue.svg");
-		background-position: 95% 80%;
+		background-image: url("../images/blue.svg");
 	}
 
 	.green {
-		background-image: url("../images/distribution--green.svg");
-		background-position: 85% 70%;
+		background-image: url("../images/green.svg");
 	}
 
 	.yellow {
-		background-image: url("../images/distribution--yellow.svg");
-		background-position: 95% 80%;
+		background-image: url("../images/yellow.svg");
+	}
+
+	.purple {
+		background-image: url("../images/purple.svg");
 	}
 }
 
 @include breakpoint-up(lg) {
 	.homepage-cards {
-		background-color: $white;
-		grid-gap: rem(38);
-		grid-template-columns: repeat(3, 1fr);
+		grid-template-columns: repeat(4, 1fr);
 		padding: 0 rem(60) rem(50) rem(60);
-
-		.card {
-			background-position: 85% 60%;
-		}
 	}
 }
