--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -4,7 +4,7 @@
 
 body {
 	background-attachment: fixed;
-	background-image: url("../images/distribution--background.svg");
+	background-image: url("../images/background.svg");
 	background-position: 0 center;
 	background-repeat: repeat-x;
 	background-size: cover;
