fix: remove initiatives css selector

--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -164,8 +164,8 @@
 		}
 	}
 
-	// The Initiatives page
-	.initiatives {
+	// Initiatives page: Workshop section
+	.workshop {
 		a:focus,
 		a:hover {
 			img {
