--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -11,7 +11,7 @@ header {
 	// Styles for the search container
 	.search-container {
 		svg {
-			fill: white;
+			fill: $white;
 			height: rem(24);
 			margin: rem(-29);
 			width: rem(24);
