feat: host Antranig's initial map demo on the WeCount website

--- a/src/_includes/components/nav-menu.njk
+++ b/src/_includes/components/nav-menu.njk
@@ -6,4 +6,5 @@
   {%- endfor %}
   <a {% if page.url === '/news/' %}aria-current="page" {% endif %}href="/news/">News</a>
   <a {% if page.url === '/views/' %}aria-current="page" {% endif %} href="/views/">Views</a>
+  <a {% if page.url === '/map/' %}aria-current="page" {% endif %} href="/map/">Map</a>
 </nav>
