--- a/src/map.njk
+++ b/src/map.njk
@@ -28,7 +28,7 @@ permalink: /map/
 $(document).ready(function () {
 	fluid.mapviz.covid.map(".fl-mapviz-container", {
 		dataUrl: window.location.origin + "/assessment_centre_locations.csv"
-    // Note: when fluid.mapviz.covid.map() supports the fetch of a remote data file, the line below can be uncommented.
+    // Note: when fluid.mapviz.covid.map() supports the fetch of a remote data file, uncomment the line below.
     // Using this line now leads to "Cross-Origin Request Blocked" error.
     // For now, eleventy.config.js copies "node_modules/fluid-covid-map-viz/data/assessment_centre_locations.csv" to
     // the root directory of the deployed site to avoid this issue.
