--- a/src/map.njk
+++ b/src/map.njk
@@ -29,11 +29,9 @@ permalink: /map/
 $(document).ready(function () {
 	fluid.mapviz.covid.map(".fl-mapviz-container", {
 		dataUrl: window.location.origin + "/assessment_centre_locations.csv"
-		// Note: when fluid.mapviz.covid.map() supports the fetch of a remote data file, uncomment the line below.
-		// Using this line now leads to "Cross-Origin Request Blocked" error.
-		// For now, eleventy.config.js copies "node_modules/fluid-covid-map-viz/data/assessment_centre_locations.csv" to
-		// the root directory of the deployed site to avoid this issue.
-		// dataUrl: "https://github.com/cindyli/covid-assessment-centres/blob/trigger-map-deploy/latest.csv"
+		// Note: The server serves `/api/getMapData` API that returns the covid csv data in a string. However, using
+		// it as `dataUrl` throws this error: Failure loading resources for component at path map-2a4bkf2t-38
+		// dataUrl: window.location.origin + "/api/getMapData"
 	});
 });
 </script>
