fix: apply the new design to home page tiles

--- a/src/page.njk
+++ b/src/page.njk
@@ -30,7 +30,7 @@ permalink: "/{{ '/' if pageItem.slug === 'home' else pageItem.slug	}}/"
 			<a href="/inclusion-challenges/" class="yellow card">
 				<h2>Participate in our inclusion challenge workshops</h2>
 			</a>
-			<a href="/badges/" class="purple card">
+			<a href="/badges/" class="azure card">
 				<h2>Earn We Count Badges</h2>
 			</a>
 		</div>
