--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -36,13 +36,19 @@ $blue-alt: #5c81a9;
 $blue-alt-contrast: #5879a0;
 $blue-alt-dark: #4d6b8d;
 $blue-alt-light: #8caabb;
+$blue-grey: #f2ffff;
+$azure: #eef7ff;
+
 $green: #b0d0be;
 $green-light: #cee6c5;
 $green-dark: #465d8b;
 $green-pale: #f7fff4;
+$green-grey: #f6ffea;
 
 $orange-focus: #fadc90;
 $orange-light: #5c81a9;
+
+$yellow: #fff8e2;
 
 // UIO themes
 $UIOThemes:
