--- a/src/page.njk
+++ b/src/page.njk
@@ -52,6 +52,13 @@ permalink: "/{{ '/' if pageItem.slug === 'home' else pageItem.slug	}}/"
 	</div>
 </article>
 
+{% elif pageItem.slug === 'advisory-panel' %}
+<article class="advisory-panel">
+	<div class="api-content">
+		{{ pageItem.content | safe }}
+	</div>
+</article>
+
 {% else %}
 <article class="page">
 	<h1>{{ pageTitle }}</h1>
@@ -71,4 +78,8 @@ document.querySelectorAll("main article.page h1, main article.page h2, header").
 	contentHeaderObserver.observe(section);
 });
 </script>
+
+{% if pageItem.slug === 'advisory-panel' %}
+	<script src="/js/advisory-panel-handler.js"></script>
+{% endif %}
 {% endblock %}
