--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -275,6 +275,11 @@
 				box-shadow: rem(10) rem(10) rem(10) currentColor;
 			}
 		}
+
+		// Advisory panel page
+		.advisory-panel > .api-content > .wp-block-group > .wp-block-group__inner-container > .wp-block-group > .wp-block-group__inner-container > .wp-block-group {
+			box-shadow: 0 rem(4) rem(4) currentColor;
+		}
 	}
 
 	// The search container on the "Views" page
