--- a/src/scss/components/_components.scss
+++ b/src/scss/components/_components.scss
@@ -1,6 +1,7 @@
 // Component-specific styles.
 @import "advisory-panel";
 @import "aside";
+@import "badges";
 @import "brand";
 @import "cards";
 @import "filter";
