fix: address the review comment

--- a/src/scss/components/_badges.scss
+++ b/src/scss/components/_badges.scss
@@ -1,6 +1,10 @@
 // CSS classes for the "Badges" page
 .badges {
 	h3 {
-		margin-bottom: rem(-8);
+		margin-bottom: 0;
+
+		& + div p {
+			margin-top: rem(6);
+		}
 	}
 }
