--- a/src/page.njk
+++ b/src/page.njk
@@ -6,13 +6,13 @@ pagination:
 permalink: "/{{ '/' if pageItem.slug === 'home' else pageItem.slug	}}/"
 ---
 
-{% extends 'layouts/base.njk' %}
+{% extends "layouts/base.njk" %}
 
 {% set pageTitle = pageItem.title %}
 {% set pageExcerpt = pageItem.excerpt %}
 
 {% block content %}
-{% if page.url === '/' %}
+{% if page.url === "/" %}
 <div>
 		<article>
 		<h1 class="title">{{ pageTitle }}</h1>
@@ -36,7 +36,7 @@ permalink: "/{{ '/' if pageItem.slug === 'home' else pageItem.slug	}}/"
 		</div>
 </div>
 
-{% elif pageItem.slug === 'initiatives' %}
+{% elif pageItem.slug === "initiatives" %}
 <article class="page {{ pageItem.slug }}">
 	<h1 class="title">{{ pageTitle }}</h1>
 	<div class="api-content">
@@ -46,14 +46,17 @@ permalink: "/{{ '/' if pageItem.slug === 'home' else pageItem.slug	}}/"
 	<div>
 		{% for workshop in collections.workshops %}
 		<div class="api-content">
-			{% include 'components/workshop.njk' %}
+			{% include "components/workshop.njk" %}
 		</div>
 		{% endfor %}
 	</div>
 </article>
 
-{% elif pageItem.slug === 'advisory-panel' %}
-<article class="advisory-panel">
+{% elif pageItem.slug === "advisory-panel" or pageItem.slug === "team" %}
+<article class="{{ pageItem.slug }}">
+	{% if pageItem.slug === "team" %}
+	<h1 class="title">{{ pageTitle }}</h1>
+	{% endif %}
 	<div class="api-content">
 		{{ pageItem.content | safe }}
 	</div>
@@ -79,7 +82,10 @@ document.querySelectorAll("main article.page h1, main article.page h2, header").
 });
 </script>
 
-{% if pageItem.slug === 'advisory-panel' %}
+{% if pageItem.slug === "advisory-panel" %}
 	<script src="/js/advisory-panel-handler.js"></script>
+{% endif %}
+{% if pageItem.slug === "team" %}
+	<script src="/js/team-handler.js"></script>
 {% endif %}
 {% endblock %}
