--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -28,6 +28,7 @@ $black: #000;
 $grey-lighter: #f3f3f3;
 $grey-light: #6c6c6c;
 $grey-dark: #313131;
+$grey-shade: #c4c4c4;
 $navy-dark: #162439;
 $navy: #203149;
 $navy-light: #2e405b;
