--- a/src/workshop-comments.njk
+++ b/src/workshop-comments.njk
@@ -13,7 +13,7 @@ permalink: "initiatives/{{ workshopItem.id }}/"
 	<article class="workshop-page">
 		<h1>{{ workshopItem.title | safe }}</h1>
 		{% if workshopItem.imageUrl %}
-			<img class="workshop-image" src="{{ workshopItem.imageUrl | safe }}" alt="{{ workshopItem.imageAlt }}">
+		<img class="workshop-cover-image" src="{{ workshopItem.imageUrl | safe }}" alt="{{ workshopItem.imageAlt }}">
 		{% endif %}
 
 		<div class="description">{{ workshopItem.fullDescription | safe }}</div>
