--- a/src/scss/components/_initiatives.scss
+++ b/src/scss/components/_initiatives.scss
@@ -9,7 +9,7 @@
 		margin: rem(32) 0 rem(32) 0;
 
 		&:hover {
-			box-shadow: 0 0 rem(35) rgba(0, 0, 0, 0.55);
+			border-radius: rem(18);
 		}
 
 		// Workshop title and descriptions
@@ -30,15 +30,17 @@
 
 			img {
 				border-radius: 0 0 rem(18) rem(18);
+				box-shadow: 0 0 0 rem(4) transparent inset;
 				height: 100%;
+				// Add initial padding to leave room for the inset box shadow to display at focus/hover
+				padding: rem(4);
 				width: 100%;
 			}
 
 			a:focus,
 			a:hover {
 				img {
-					border: rem(4) solid $navy-light;
-					border-radius: 0 0 rem(18) rem(18);
+					box-shadow: 0 0 0 rem(4) $navy-light inset;
 				}
 			}
 		}
@@ -248,14 +250,6 @@
 			.workshop-image {
 				img {
 					border-radius: 0 rem(18) rem(18) 0;
-				}
-
-				a:focus,
-				a:hover {
-					img {
-						border: rem(4) solid $navy-light;
-						border-radius: 0 rem(18) rem(18) 0;
-					}
 				}
 			}
 		}
